--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,63 @@
 html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: grey;
+}
+
+input[name="line"]{
+    position: absolute;
+    top: 25%;
+    left: 43%;
+    height: 30px;
+}
+
+.keyboard{
+    position: absolute;
+    top: 35%;
+    left: 25%;
+    width: auto;
+    height: auto;
+    background-color: green;
+}
+.keyboard__line1{
+    background-color: white;
+    height: auto;
+    width: auto;
+
+}
+.keyboard__line2{
+    position: relative;
+    left: 15px;
+    background-color: blue;
+    height: auto;
+    width: auto;
+}
+.keyboard__line3{
+    position: relative;
+    left: 50px;
+    background-color: red;
+    height: auto;
+    width: auto;
+}
+.keyboard__line1__keys,
+.keyboard__line2__keys,
+.keyboard__line3__keys{
+    display: inline-block;
+    width: 53px;
+    height: 53px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    box-sizing: border-box;   /*для padding - вырванивание текста по вертикали*/
+    padding-top: 15px;
+
+    font-size: 19px;
+    font-family: "Arial", sans-serif;
+    text-align: center;
+    color: black;
+
+    border: 2px solid #e6d68e;
+    border-radius: 5px;
 
 }
