--- a/styles.css
+++ b/styles.css
@@ -3,52 +3,57 @@ html,body{
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: grey;
+    /* background-color: grey; */
+    background-image: url(img/3.jpg);
 }
 
 input[name="line"]{
     position: absolute;
-    top: 25%;
-    left: 43%;
-    height: 30px;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);    /*выравнить по горизонтали (-left)*/
+    height: 40px;
+    width: 300px;
+
+    background-color: transparent;
+    border: 2px solid #e6d68e;
+    border-radius: 5px;
+    opacity: 1;
 }
 
 .keyboard{
     position: absolute;
-    top: 35%;
-    left: 25%;
-    width: auto;
-    height: auto;
-    background-color: green;
-}
-.keyboard__line1{
-    background-color: white;
-    height: auto;
-    width: auto;
+    top: 43%;
+    left: 50%;
+    transform: translateX(-50%);     /*выравнить по горизонтали (-left)*/
+    width: 638px;
+    height: 175px;
+    padding: 10px;
+    background-color: rgba(255,255,255,0.1); /*прозрачный фон за клавой*/
+    border-radius: 5px;
 
 }
-.keyboard__line2{
+.keyboard__line{
     position: relative;
-    left: 15px;
-    background-color: blue;
     height: auto;
     width: auto;
+    margin-bottom: 8px;
+}
+.keyboard__line1{
+}
+.keyboard__line2{
+    left: 25px;
 }
 .keyboard__line3{
-    position: relative;
-    left: 50px;
-    background-color: red;
-    height: auto;
-    width: auto;
+    left: 55px;
+    margin-bottom: 0;
 }
-.keyboard__line1__keys,
-.keyboard__line2__keys,
-.keyboard__line3__keys{
+.keyboard__key{
     display: inline-block;
     width: 53px;
     height: 53px;
     margin-right: 8px;
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */     /*перенесено в line чтобы убрать matgin снизу*/
     box-sizing: border-box;   /*для padding - вырванивание текста по вертикали*/
     padding-top: 15px;
 
@@ -59,5 +64,8 @@ input[name="line"]{
 
     border: 2px solid #e6d68e;
     border-radius: 5px;
-
+}
+.keyboard__key:last-child{
+    margin-right: 0;
+    /* margin-bottom: 0; */
 }
