--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ input[name="line"]{
     height: 40px;
     width: 300px;
 
+    font-size: 19px;
+    font-family: "Arial", sans-serif;
+    text-align: center;
+    color: #041d23;
+
     background-color: transparent;
     border: 2px solid #e6d68e;
     border-radius: 5px;
